...
/* menu item which gives credits about the application, as in "About Safari".  %@ will replaced by the name of the application.  */
"aboutApp%@" = "About %@" ;

/* Label on a field in which the user fills in the "account name", which specifies their personal information, such as a Google account or a Yahoo! account. */
"account" = "Account" ;

/* %0 = Name of some data or settings.  Examples: "Open/Save", "Clients", "Syncers", "Logs".
 %1 = A document type.  Example: "Collection", "Text".
 */
"accountDataDefX2" = "These \"%0\" settings are associated with the current %1 document in the current Macintosh user account.  But they are stored elsewhere, not in the document file." ;

/* Title of menu item which user clicks to indicate when she wants to see some data which is in the Macintosh user account that she is logged in with. */
"accountMacMy" = "My Macintosh User Account" ;
...
"syncerzTrigger" = "Trigger" ;

/* More than one Trigger. */
"syncerzTriggers" = "Triggers" ;

/* Reference to an object which has just caused a trigger.  For example, say that you have a burglar alarm system with a trigger on each door.  If an alarm occurs due to a burglar breaking in the back door, the back door would be the "Triggering Door" for this particular alarm event.
 %0 = Object which caused or facilitated the trigger.  Examples: "Door", "Client", "File" */
"syncerzTrigngX" = "Triggering %0" ;

/* Tool Tip explaining a list of Triggers, under a list of , one of which is selected.  */
"syncerzTriggersToolTip" = "Triggers are events which cause the selected Syncer perform its Commands." ;

/* Text of a warning sheet which is shown after user clicks a button title "Wizard…", in a view showing customized details of .  To clear the sheet, the user must click one of two buttons, either "Cancel" or "Do It".
...
"doFirstX" = "%0 first." ;

/* - */
"domainHostPath" = "domain, host, path" ;

/* Title of a button which the user clicks when the user is done */
"done" = "Done" ;

/* Sentence that application displays when it has completed a task */
"doneIs" = "Done." ;

/* Heading before a list of tasks that have been completed.  Examples: "Completed: Import"  "Completed: Import, Calculations". */
"completed" = "Completed:" ;
...
/* Continuation of toolTip explaining why it might make a difference which client is first, second, third, etc. */
"imex_clientOrderWhy" = "Client order may affect the results when bookmarks Content is merged during an Import operation." ;

/* Tooltip explaining why a checkbox for exporting items is disabled (not able to be checked ON).
 %0 = What would be exported if the checkbox was checked on.  Examples: "Separators", "Bookmarks", "Folders".
 %1 = Title of a different control.  Examples: "Clean Slate", "Merge Keep".  You may want to enclose this in quotes.
 %2 = Setting of that different control.  Examples: "Yes", "No", "On", "Off". */
"imex_client_expCantX" = "%0 cannot be exported because %1 is set to %2." ;

/* Tooltip explaining what a checkbox does.
 %0 = What will be exported.  Examples: "Separators", "Bookmarks", "Folders"
 %1 = The label on another control.
 If the box is checked off, these things will not be exported.
...
